# libdbus-

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/include/: header.h
examples/src/: client.cpp  server.cpp
plugin/: CMakeLists.txt
plugin/src/: plugin.cpp
